Make sure / nav items don’t overlap on mobile
fixes #731

--- a/app/assets/stylesheets/solicitations/index.sass
+++ b/app/assets/stylesheets/solicitations/index.sass
@@ -7,6 +7,13 @@
   color: var(--theme-dark-text)
   border: 1px solid var(--theme-dark-text)
 
+@media (max-width: 549px)
+  .nav__item
+    display: -webkit-flex
+    display: -ms-flexbox
+    display: flex
+
+
 .hero__container
   min-height: 0px
   h1.hero__title
